Adicionando foto a pagina de temas e atualizando alguns componentes

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="pt-br">
 <head>
+  <style>
+    html{
+      background-color:rgb(9,18,58); 
+    }
+  </style>
   <meta charset="utf-8">
   <title>FurandoABolha</title>
   <base href="/">
